[package]
name = "bacon_rajan_cc"
version = "0.3.1"
authors = ["Nick Fitzgerald <fitzgen@gmail.com>", "Jeff Muizelaar <jrmuizel@gmail.com>"]

description = "A reference counted type with cycle collection."

license = "MIT/Apache-2.0"

repository="https://github.com/fitzgen/bacon-rajan-cc"
documentation="https://docs.rs/crate/bacon_rajan_cc/"

readme="README.md"

keywords=["cc", "gc", "mark", "sweep", "garbage"]

[lib]
name = "bacon_rajan_cc"

[dependencies]
log = { version = "0.4.14", optional = true }

[features]
default = []
auto_gc = []
gc_placement_cc_alloc = []
gc_placement_cc_cycle_marked = []
gc_placement_cc_every_drop = []
gc_debug = ["log"]
